code refactored product test service class and functional class